# kubelab

./: .cache_ggshield  .cursorrules  .env.dev.example  .env.example  .env.prod.example  .eslintignore  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  .release-please-manifest.json  .sops.yaml  .yamllint  .yamllint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  astro.config.mjs  docker-compose.dev.yml  docker-compose.yml  eslint.config.js  package-lock.json  package.json  pyproject.toml  release-please-config.json  tailwind.config.mjs  yamllint.yml
.github/: dependabot.yml  pull_request_template.md  rulesets.json  rulesets.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/hooks/: pre-push.sh  validate-commit-msg.sh
.github/workflows/: CI.yml  add-to-project.yml  branch-name.yml  branch-protection.yml  branch-validation.yml  cd-call-n8n.yml  cd-deploy.yml  cd-release.yml  cd.yml  check-config-drift.yml  ci-01-dispatch.yml  ci-02-pipeline.yml  ci-03-publish.yml  ci-04-release.yml  ci-backend.yml  (+24 more)
.github/workflows.old/: ci-02-pipeline.yml  content-validation.yml
apps/: README.md
apps/workers/: .gitignore  Dockerfile  PROPOSED_MODULES.md  README.md  celery_app.py  pyproject.toml
apps/workers/youtube/: __init__.py  analyzer.py  config.py  exporters.py  tasks.py  transcript.py
backend/: .env.example  go.mod  go.sum
deploy-staging/: docker-compose.yml
docs/: ADR.md  ARCHITECTURE-AND-DECISIONS.md  ARCHITECTURE.md  CI-CD.md  CONTRIBUTING.md  CUBELAB.md  HOW-TO.md  KUBELAB.md  README.md  TESTING.md  TOOLKIT.md  TROUBLESHOOTING.md  TROUBLESHOOTING.md.example  VERSIONING.md  WIKI.md  lessons.md
frontend/: .env.example  _config.yml  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json
public/: robots.txt
scripts/: README.md  analyze-logs.sh  cd-local.sh  check-status.sh  ci-local.sh  config-update.sh  configure_local.sh  create-env-example.sh  deploy-app.sh  deploy-rollback.sh  deploy.sh  dev-setup.sh  generate-ansible-config.sh  generate-credentials.sh  generate-env-example.sh  generate-traefik-config.sh  generate-traefik-credentials.sh  generate-wiki.sh  github_secrets.sh  install-precommit-hooks.sh  monitor-security.sh  perf-test.sh  replace-placeholders.sh  rollback.sh  security-check.sh  set_static_netplan.sh  setup-ci.sh  setup-dev.sh  setup-gh-environments.sh  setup-gh-secrets.sh  setup-github-secrets.sh  setup-hetzner.sh  setup-secrets.sh  setup-server.sh  setup-ssh.sh  setup_proxmox_network.sh  update-env.sh  utils.sh  wiki.sh
site/: astro.config.mjs  package-lock.json  package.json
tasks/: homelab-k3s-architecture.md  lessons.md  todo.md
test/: Beehiiv.postman_collection.json
tests/: Beehiiv.postman_collection.json  conftest.py  test_argo_manager.py  test_cluster_bootstrap.py  test_configure_oidc.py  test_core_io.py  test_credentials_reconcile.py  test_generator_ansible.py  test_headscale_role.py  test_health_check.py  test_image_tag.py  test_infra_k8s_deploy_rollout.py  test_k8s_connect.py  test_k8s_generator_configmap_env.py  test_k8s_generator_secrets.py  test_k8s_kubeconfig.py  test_k8s_middlewares.py  test_k8s_render.py  test_k8s_secrets_apply.py  test_k8s_secrets_apprise.py  test_k8s_secrets_delivery.py  test_k8s_secrets_users_db.py  test_n8n_import.py  test_notify_smoke.py  test_promotion.py  test_registry_prune.py  test_secrets_argocd_catalog.py  test_secrets_input_hardening.py  test_secrets_placeholder_reject.py  test_smoke.py  test_sops_age_key.py  test_sync.py  test_sync_homepage_config.py  test_sync_k8s_images.py  test_sync_oidc_hashes.py  test_toolkit_init.py
toolkit/: .gitignore  README.md  __init__.py  main.py
utils/: consts.ts
(+1240 files in other folders)
