[tool.poetry]
name = "workers"
version = "0.1.0"
description = "CubeLab Background Workers"
authors = ["Manu <info@mlorente.dev>"]

[tool.poetry.dependencies]
python = "^3.12"
celery = {extras = ["redis"], version = "^5.3.6"}
redis = "^5.0.1"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
# YouTube Worker Dependencies
google-api-python-client = "^2.112.0"
google-auth-oauthlib = "^1.2.0"
youtube-transcript-api = "^0.6.1"
PyYAML = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.12.1"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
